--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>UNC to SMB</title>
 		<meta charset="utf-8" />
 		<meta lang="en" />
-		<meta property="og:image" content="social.png">
+		<meta property="og:image" content="https://simplepotential.github.io/UncToSmb/social.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="main.css" />
 		<script src="main.js" defer></script>
