Corrected github source link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div id="main-form-status">&nbsp;</div>
 				<div id="main-form-footer">
 					<a href="https://www.simplepotential.com" target="_blank">Simple Potential</a> | 
-					<a href="https://github.com/SimplePotential/" target="_blank">GitHub Source</a>
+					<a href="https://github.com/SimplePotential/UncToSmb" target="_blank">GitHub Source</a>
 				</div>
 			</div>
 		</div>
