--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 				<div id="main-form-title">Convert Windows UNC to Mac SMB Path</div>
 				<form id="main-form-form" onreset="ClearStatus()">
 					<input type="text" id="txtUNC" class="inputText" placeholder="Window's UNC Path" onfocus="SelectAll(this)" autocomplete="off" /><br/>
+					<input type="checkbox" id="chkSpaces" checked /><label for="chkSpaces">Escape Spaces (recommended)</label><br/>
 					<input type="button" onclick="UncToMac()" value="Convert" class="inputButton" /><input type="reset" value="Clear" class="inputButton" /><br/>
-					<input type="text" id="txtSMB" class="inputText" placeholder="SMB (Mac) Path Result" onfocus="SelectAll(this)" autocomplete="off" readonly />			
+					<input type="text" id="txtSMB" class="inputText" placeholder="SMB (Mac) Path Result" onfocus="SelectAll(this)" autocomplete="off" readonly /><br/>
 				</form>
 				<div id="main-form-status">&nbsp;</div>
 				<div id="main-form-footer">
